--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
+---
 title: Testing page
+date: 2018-06-26
+---
 author: Hoang Le
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
